--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@ Special Volume on <I>Risk Management Approaches in Engineering Applications</I>:
 <!--p>See <B><a href="http://rutcor.rutgers.edu/CfP%20S.I.%20Risk%20Management%20Approaches%20in%20Engineering%20Applications.pdf">CFP</a></B> for the details.</p-->
 </LI>
 <LI> Associate Editor of <a href="http://link.springer.com/journal/11081">Optimization and Engineering</a>, Springer, since 2014</LI>
-<LI> Guest Editor of <a href="http://www.orsj.or.jp/~oldweb/english/submission/submission.html">the Journal of Operations Research of Japan</a> Vol.54 No.4, 2011.</LI>
-<LI> Associate Editor of <a href="http://www.orsj.or.jp/~oldweb/english/submission/submission.html">the Journal of Operations Research of Japan</a> since 2008 (vol.51 no. 2) till 2012.</LI>
+<LI> Guest Editor of <a href="https://orsj.org/jorsj-en">the Journal of Operations Research of Japan</a> Vol.54 No.4, 2011.</LI>
+<LI> Associate Editor of <a href="https://orsj.org/jorsj-en">the Journal of Operations Research of Japan</a> since 2008 (vol.51 no. 2) till 2012.</LI>
    </MENU>
 <HR>
 
@@ -303,17 +303,17 @@ Special Volume on <I>Risk Management Approaches in Engineering Applications</I>:
 
 	<LI>Kensuke Asai and <u>Jun-ya Gotoh</u> 
         "EM Algorithms for Optimization Problems with Polynomial Objectives", 
-	<a href="">International Symposium on Mathematical Programming (ISMP 2024 Montreal)</a>, Montreal, Canada
+	<a href="https://ismp2024.gerad.ca/">International Symposium on Mathematical Programming (ISMP 2024 Montreal)</a>, Montreal, Canada
 	July 2024.</LI>
 
 	<LI>Kensuke Asai and <u>Jun-ya Gotoh</u> 
         "EM Algorithms for Optimization Problems with Polynomial Objectives", 
-	<a href="">DO x ML 2024</a>, GRIPS, Tokyo, Japan
+	<a href="https://doml.zib.de/previous/doml2024.html">DO x ML 2024</a>, GRIPS, Tokyo, Japan
 	July 2024.</LI>
 
 	<LI><u>Jun-ya Gotoh</u>, Shotaro Yagishita, and  Shichen Zuo, 
         "Optimization approaches to tailor regression spline for better fit", 
-	International Conference on Stochastic Programming (ICSP 2023) UC Davis, CA, USA,  
+	<a href="https://na.eventscloud.com/website/40825/home/">International Conference on Stochastic Programming (ICSP 2023)</a> UC Davis, CA, USA,  
 	July, 2023.</LI>
 
 	<LI>Shotaro Yagishita and <u>Jun-ya Gotoh</u> 
@@ -328,8 +328,8 @@ Special Volume on <I>Risk Management Approaches in Engineering Applications</I>:
 	September, 2022.</LI>
 
 	<LI>Shotaro Yagishita and <u>Jun-ya Gotoh</u> 
-        <a href=""></a> (poster presentation)
-	<a href="">the Seventh International Conference on Continuous Optimization (ICCOPT 2022)</a>, Leighigh University, VA, USA,
+        "Knot Selection of B-Spline Regression via Trimmed Regularizer" (poster presentation)
+	<a href="https://iccopt2022.lehigh.edu/">the Seventh International Conference on Continuous Optimization (ICCOPT 2022)</a>, Leighigh University, VA, USA,
 	 July, 2022.</LI>
 
 	<LI><u>Jun-ya Gotoh</u>, "Fitting Models to Data with Trimmed LASSO Penalties," 
@@ -343,7 +343,7 @@ Special Volume on <I>Risk Management Approaches in Engineering Applications</I>:
 
 	<LI><u>Jun-ya Gotoh</u>, Yuichi Misawa, and Shummin Nakayama, 
 	"Continuous Exact Penalty Approach To Grouped Variable Selection In Regression Methods," 
-	<a href="">INFORMS Annual Meeting 2020 virtual</a>
+	INFORMS Annual Meeting 2020 virtual
 	October 12, 2020.</LI>
 
 	<LI><u>Jun-ya Gotoh</u> and Shummin Nakayama,
