--- a/index.html
+++ b/index.html
@@ -579,7 +579,7 @@ Management Approaches in Engineering Applications</a>,"
 <HR>
 
 <DL>
- <DT><FONT COLOR="#2e8b57" SIZE="+1"><b>Courses:</b></FONT></DT>
+ <DT><FONT COLOR="#2e8b57" SIZE="+1"><b>Courses (in Chuo university):</b></FONT></DT>
  <MENU>
   <LI> Undergraduate
    <MENU>
@@ -607,6 +607,8 @@ Management Approaches in Engineering Applications</a>,"
     <LI> Convex Optimization (1st.semester, 2014, 2015, 2017, 2019)
     <LI> Financial Optimization (2nd.semester, 2014, 2015, 2017, 2019)
     <LI> Financial Optimization (2nd.semester, 2014, 2015, 2017, 2019)
+    <LI> Financial Engineering I (1st semester, 2007-2013)
+    <LI> Financial Engineering II (2nd semester, 2007-2013)
    </MENU>
  </MENU>
 </DL>
