--- a/index.html
+++ b/index.html
@@ -99,6 +99,10 @@ Special Volume on <I>Risk Management Approaches in Engineering Applications</I>:
          <i><a href="https://www.jmlr.org/">Journal of Machine Learning Research</a></i>, 25(21):1-42.
 		<!--p>arXiv:2012.07491 [math.OC] (submitted).</p--> <br><br>
 
+    <LI> Yagishita, S. and <u>Gotoh, J.</u> (2024),
+         "<a href="https://link.springer.com/article/10.1007/s13160-023-00631-5">Exact penalty method for knot selection of B-spline regression</a>"<br>
+         <i><a href="https://link.springer.com/journal/13160">Japan Journal of Industrial and Applied Mathematics</a></i>, 41, 1033-1059.<br><br>
+
    <LI> <u>Gotoh, J.</u>, Kim, M.J., and Lim, A.E.B.(2023),
          "<a href="https://pubsonline.informs.org/doi/full/10.1287/opre.2021.0393">A Data-Driven Approach to Beating SAA Out of Sample</a>" 
          <font color="#ff0000"><b>[Open Access]</b></font><br> 
